[tool.poetry]
name = "ecoindex-reconstruction-map-v2"
version = "0.1.0"
description = ""
authors = ["Will Pearson <will.pearson@xtra.co.nz>"]
readme = "TODO.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
geopandas = "^0.14.3"
matplotlib = "^3.8.3"
plotly = "^5.19.0"
shapely = "^2.0.3"
rasterio = "^1.3.9"
geocube = "^0.5.0"
pyproj = "^3.6.1"
jenkspy = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
